--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <title>Michael's Website</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my website</p>
-    <p>Thanks for visiting. To learn about me <a href="aboutme.html">Click here</a></p>
+    <img src="csc106_banner.jpg" class="center"><br>
+    <table>
+        <thead>
+            <tr>
+                <a href="index.html"><img src="home.png" class="center"></a>
+            </tr>
+            <tr>
+                <a href="javascripts.html"><img src="js.png" class="center"></a>
+            </tr>
+            <tr>
+                <a href="aboutme.html"><img src="aboutme.png" class="center"></a>
+            </tr>
+        </thead>
+    </table>
+    <h1>Welcome to Michael's Page</h1>
+    <p>
+        This page is a portfolio for my CSC 106 projects. 
+        With this page you will also be able to learn things about me like my hobbies, interests, and some of my day to day life. 
+        Hopefully I can improve this website as I advance more in the course and make it my own. 
+    </p>
 </body>
 </html>
