--- a/javascripts.html
+++ b/javascripts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Michael</title>
+    <title>Michael's JS projects</title>
 </head>
 <body>
     <img src="csc106_banner.jpg" class="center"><br>
@@ -20,15 +20,11 @@
             </tr>
         </thead>
     </table>
-    <h1>Learn More About Me</h1>
+    <h1>Welcome to Michael's Javascript Projects</h1>
     <p>
-        This page is so everyone can learn interesting facts about me. 
+        This page is to display my Javascript projects. 
+        With this page I hope to see my evolution as a coder. 
+        I also hope that this page can inspire other coders.
     </p>
-    <h2>Fun facts</h2>
-    <ol>
-        <li>I play the piano, drums, and a little bit of guitar.</li>
-        <li>I am a Neuroscience major on a pre-med track.</li>
-        <li>I love late night drives with my friends</li>
-    </ol>
 </body>
 </html>
