--- a/aboutme.html
+++ b/aboutme.html
@@ -4,31 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Michael</title>
+    <style>
+        body{
+            background-image:url(myBackground.jpg);
+        }
+        #michael{
+            float:left;
+            width:125px;
+            margin-right:35px;
+
+        }
+        #piano{
+            float:bottom;
+            width:200px;
+
+        }
+        #latenight{
+            float:right;
+            width:700px;
+        }
+    </style>
 </head>
 <body>
-    <img src="csc106_banner.jpg" class="center"><br>
+    <img src="myBanner.jpg"><br>
     <table>
         <thead>
             <tr>
                 <a href="index.html"><img src="home.png" class="center"></a>
             </tr>
             <tr>
-                <a href="javascripts.html"><img src="js.png" class="center"></a>
+                <a href="javascripts.html"><img src="javascripts.png" class="center"></a>
             </tr>
             <tr>
-                <a href="aboutme.html"><img src="aboutme.png" class="center"></a>
+                <a href="aboutme.html"><img src="about.png" class="center"></a>
             </tr>
         </thead>
     </table>
     <h1>Learn More About Me</h1>
     <p>
-        This page is so everyone can learn interesting facts about me. 
+        Hello Everyone,<br>
+        Welcome to my page. I am a Sophmore Neuroscience major on the pre-med track at the University of Rhode Island. 
+        I am originally from Brooklyn, New York but I moved around between the United States of American and Dominican Republic many times as a child. 
+        I aspire to be a leading neuroscientist and neurosurgeon. If you'd like to ever speak to me you can email me at michael.florian@uri.edu
     </p>
+    <img src="michael.png" id="michael">
     <h2>Fun facts</h2>
     <ol>
         <li>I play the piano, drums, and a little bit of guitar.</li>
-        <li>I am a Neuroscience major on a pre-med track.</li>
-        <li>I love late night drives with my friends</li>
+        <li>I am learning how to produce music.</li>
+        <li>I love late night drives with my friends.</li>
     </ol>
+    <img src="piano.jpeg" id="piano">
+    <img src="latenight.jpg" id="latenight">
 </body>
 </html>
