--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael's Website</title>
+    <style>
+        body{
+            background-image:url(myBackground.jpg);
+        }
+    </style>
 </head>
 <body>
-    <img src="csc106_banner.jpg" class="center"><br>
+    <img src="myBanner.jpg"><br>
     <table>
         <thead>
             <tr>
                 <a href="index.html"><img src="home.png" class="center"></a>
             </tr>
             <tr>
-                <a href="javascripts.html"><img src="js.png" class="center"></a>
+                <a href="javascripts.html"><img src="javascripts.png" class="center"></a>
             </tr>
             <tr>
-                <a href="aboutme.html"><img src="aboutme.png" class="center"></a>
+                <a href="aboutme.html"><img src="about.png" class="center"></a>
             </tr>
         </thead>
     </table>
