--- a/javascripts.html
+++ b/javascripts.html
@@ -33,6 +33,6 @@
     </p>
     <h2><a href="https://www.khanacademy.org/computer-programming/florian_bitmoji/5230729461153792">florian_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_bitmoji/5230729461153792/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/florian_dancing_bitmoji/6431135692406784">florian_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_dancing_bitmoji/6431135692406784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    <h2><a href="https://www.khanacademy.org/computer-programming/florian_racing_bitmoji/4560780958810112">florian_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_racing_bitmoji/4560780958810112/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/florian_racingbitmojifun/4931872248479744">florian_racingBitmojiFUN</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_racingbitmojifun/4931872248479744/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 </body>
 </html>
