--- a/aboutme.html
+++ b/aboutme.html
@@ -23,10 +23,14 @@
             float:right;
             width:700px;
         }
+        #myBanner{
+            width:100%;
+            height:60%;
+        }
     </style>
 </head>
 <body>
-    <img src="myBanner.jpg"><br>
+    <img src="myBanner.jpg" id="myBanner"><br>
     <table>
         <thead>
             <tr>
@@ -37,6 +41,9 @@
             </tr>
             <tr>
                 <a href="aboutme.html"><img src="about.png" class="center"></a>
+            </tr>
+            <tr>
+                <a href="finalproject.html"><img src="finalproject.png" class="center"></a>
             </tr>
         </thead>
     </table>
