--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
         body{
             background-image:url(myBackground.jpg);
         }
+        #home{
+            align-items:center;
+        }
+        #javascripts{
+            align-items: center;
+        }
     </style>
+    
 </head>
 <body>
     <img src="myBanner.jpg"><br>
-    <table>
-        <thead>
-            <tr>
-                <a href="index.html"><img src="home.png" class="center"></a>
-            </tr>
-            <tr>
-                <a href="javascripts.html"><img src="javascripts.png" class="center"></a>
-            </tr>
-            <tr>
-                <a href="aboutme.html"><img src="about.png" class="center"></a>
-            </tr>
-        </thead>
-    </table>
+                <a href="index.html"><img src="home.png" id="home"></a>
+                <a href="javascripts.html"><img src="javascripts.png" id="javascripts"></a>
+                <a href="aboutme.html"><img src="about.png" id="about"></a>
+                <a href="finalproject.html"><img src="finalproject.png" id="finalproject"></a>
     <h1>Welcome to Michael's Page</h1>
     <p>
         This page is a portfolio for my CSC 106 projects. 
