--- a/javascripts.html
+++ b/javascripts.html
@@ -23,6 +23,9 @@
             <tr>
                 <a href="aboutme.html"><img src="about.png" class="center"></a>
             </tr>
+            <tr>
+                <a href="finalproject.html"><img src="finalproject.png" class="center"></a>
+            </tr>
         </thead>
     </table>
     <h1>Welcome to Michael's Javascript Projects</h1>
@@ -38,6 +41,5 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/florian_dancefloor/6252329830105088">florian_danceFloor</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_dancefloor/6252329830105088/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/florian_contactapp/4846584670633984">florian_ContactApp</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_contactapp/4846584670633984/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/florian_molemash/4855458169536512">florian_molemash</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_molemash/4855458169536512/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    <h2><a href="https://www.khanacademy.org/computer-programming/florian_memory/5122674098094080">florian_memory</a></h2><script src="https://www.khanacademy.org/computer-programming/florian_memory/5122674098094080/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 </body>
 </html> 
